--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -17,7 +17,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "yuyuan小程序",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
