--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/index/index",
     "pages/games/index",
+    "pages/endpage/index",
     "pages/getOpenId/index",
     "pages/getMiniProgramCode/index",
     "pages/deployService/index",
@@ -18,7 +19,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "yuyuan小程序",
+    "navigationBarTitleText": "最终密码YUYUAN",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
